--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+bitflags = "2.9.0"
 chumsky = "1.0.0-alpha.8"
 clap = { version = "4.5.32", features = ["derive"] }
+
+[build-dependencies]
+regex = "1.10"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [[bin]]
 name = "tsrs"
